TurtleLab/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_60\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Sejal\Documents\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar;C:\Users\Sejal\Documents\GitHub\unit1Objects\TurtleLab
-d
C:\Users\Sejal\Documents\GitHub\unit1Objects\TurtleLab\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Sejal\Documents\GitHub\unit1Objects\TurtleLab\TurtleLab.java
<---- end of javadoc command ---->
Loading source file C:\Users\Sejal\Documents\GitHub\unit1Objects\TurtleLab\TurtleLab.java...
C:\Users\Sejal\Documents\GitHub\unit1Objects\TurtleLab\TurtleLab.java:15: error: ';' expected
        turtle2.setPenColor(Color.RED)
                                      ^
C:\Users\Sejal\Documents\GitHub\unit1Objects\TurtleLab\TurtleLab.java:41: error: reached end of file while parsing
}
 ^
2 errors
